# counterstrikerust

./: .clangd.example  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  README.md  justfile
.cargo/: config.toml
.claude/: cclsp.json
.github/workflows/: build.yml
crates/core/: Cargo.toml
crates/core/src/: gamedata.rs  lib.rs
crates/core/src/commands/: chat.rs  info.rs  manager.rs  mod.rs  native.rs  print.rs
crates/core/src/config/: loader.rs  mod.rs
crates/core/src/convars/: convar.rs  fake.rs  mod.rs  vtable.rs
crates/core/src/entities/: entity_ref.rs  handle.rs  mod.rs  player.rs  system.rs
crates/core/src/events/: manager.rs  mod.rs  raw.rs  typed.rs  types.rs
crates/core/src/hooks/: context.rs  ffi.rs  gameframe.rs  inline.rs  manager.rs  midhook.rs  mod.rs  trampoline.rs  vtable.rs
crates/core/src/listeners/: client.rs  entity.rs  mod.rs  server.rs
crates/core/src/permissions/: mod.rs  registry.rs  types.rs
crates/core/src/schema/: field.rs  hash.rs  mod.rs  network.rs  system.rs
crates/core/src/tasks/: mod.rs  queue.rs
crates/core/src/timers/: mod.rs  timer.rs
crates/engine/: Cargo.toml
crates/engine/src/: error.rs  globals.rs  lib.rs  loader.rs
crates/macros/: Cargo.toml
crates/macros/src/: console_command.rs  lib.rs  parse.rs  schema_class.rs
crates/plugin/: Cargo.toml  build.rs  cbindgen.toml  exports.map
crates/plugin/cpp/: metamod_bridge.cpp  metamod_bridge.h  safetyhook_bridge.cpp  safetyhook_bridge.h
crates/plugin/src/: lib.rs
crates/plugin/src/ffi/: exports.rs  mod.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: convar.rs  interfaces.rs  lib.rs  versions.rs
examples/: .gitignore  Cargo.toml
examples/01_hello_world/: Cargo.toml
examples/01_hello_world/src/: lib.rs
examples/02_player_greeter/: Cargo.toml
examples/02_player_greeter/src/: lib.rs
examples/03_basic_commands/: Cargo.toml
examples/03_basic_commands/src/: lib.rs
examples/04_kill_tracker/: Cargo.toml
examples/04_kill_tracker/src/: lib.rs
examples/05_announcements/: Cargo.toml
examples/05_announcements/src/: lib.rs
examples/06_plugin_settings/: Cargo.toml
examples/06_plugin_settings/src/: config.rs  lib.rs
examples/07_admin_system/: Cargo.toml
examples/07_admin_system/src/: lib.rs
examples/08_entity_inspector/: Cargo.toml
examples/08_entity_inspector/src/: lib.rs
examples/09_round_manager/: Cargo.toml
examples/09_round_manager/src/: lib.rs
examples/10_advanced_integration/: Cargo.toml
examples/10_advanced_integration/src/: config.rs  lib.rs
gamedata/: cs2rust.json
