[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["dollan"]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/dollannn/cs2rust"

[workspace.dependencies]
# Internal crates
cs2rust-sdk = { path = "crates/sdk" }
cs2rust-engine = { path = "crates/engine" }
cs2rust-core = { path = "crates/core" }
cs2rust-macros = { path = "crates/macros" }

# Build dependencies
cc = "1.2"
cbindgen = "0.29"

# Runtime dependencies
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
thiserror = "2.0"
crossbeam-channel = "0.5"
slotmap = "1.0"
dashmap = "6.1"
bitflags = "2.6"

# Proc macro dependencies
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"

# Hooking (using iced-x86 for custom implementation, retour requires nightly)
iced-x86 = { version = "1.21", features = ["decoder", "encoder", "block_encoder", "instr_info"] }
region = "3.0"
paste = "1.0"

# Unix-specific
nix = { version = "0.29", features = ["mman", "signal", "fs"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster incremental builds
incremental = true
