[package]
name = "cs2rust-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "cs2rust macros - Proc macros for schema system"

[lib]
name = "cs2rust_macros"
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
darling.workspace = true
